--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Upload and Display Photo with Blur Control</title>
+    <title>Square Photo Creator</title>
     <style>
         /* Style for the container */
         button {
